k8s-manifests/cart-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: cartservice
          image: gcr.io/csc8113-group8/cart-service
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8001
          # livenessProbe:
          #   httpGet:
          #     path: /cart/health
          #     port: 8001
          #     scheme: HTTP
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: /cart/ready
          #     port: 8001
          #     scheme: HTTP
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: bookstore
spec:
  selector:
    app: cartservice
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
