k8s-manifests/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-api-ingress
  namespace: bookstore
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
    - host: bookstore.local
      http:
        paths:
          - path: /api/catalog/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalog-service
                port:
                  number: 8000
          - path: /api/cart/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cartservice
                port:
                  number: 8001
