k8s-manifests/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-frontend-ingress
  namespace: bookstore
spec:
  ingressClassName: "nginx"
  rules:
    - host: bookstore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
