k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cartservice-ingress
  namespace: bookstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cartservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 80
